0.6.2 (currently working on)
- [#2011] Fix: hideFieldsInNotificationMail doesn't work
- [#2018] Fix: Hidden single events still are visible in the list view limited to a category
- [#1977] Change: add some unit tests
- [#1894] Change: Only reset the auto_increment value if it is much higher than the highest UID

0.6.1 (released 2008-05-30)
- [#1914] Change: Build all redirection links and links in e-mails using cObj->typoLink_URL
- [#1908] Fix: Registration for event not possible if umlauts in fe-user "Name" field
- [#1099] Change: Use the new function names from the templatehelper
- [#1895] Change: getRecordProperty* should be public, not protected
- [#1903] Change: Use $this->setExpectedException() instead of try-catch-block in Unit tests

0.6.0 (released 2008-05-12)
- [#1339] Feature: Add a switch that controls when unregistration is possible
- [#1408] Feature: Create a list of categories
- [#1874] Fix: Crash on the "my events page" after unregistering from an event
- [#1873] Fix: Crash when clicking on a CSV icon in mod2
- [#1854] Change: Remove notYetImplementedSubModule from mod2/locallang.xml
- [#1686] Fix: Removed wrongly encoded stuff from Danish translation in locallang file
- [#1165] Feature: Add a checkbox "Skip registration collision check" to event records
- [#1226] Fix: showSingleEvent is missing from setup.txt
- [#1833] Fix: private -> protected in pi2 (XCLASSING issue), patch by Stefan Galinski
- [#1771] Updated Dutch translation, thanks to Kees van der Hall
- [#1818] Change: Comment and whitespace consistency cleanup
- [#1790] Fix: Option boxes for event types: Type "Workshop" loses the selection after submitting
- [#1758] Fix: HTML validation errors in the list view option boxes
- [#811] Feature: Add, edit, list functionality like the be_groups field in the be_user dialog, patch by Stefan Galinski
- [#1774] Updated Russion translation, thanks to Irina Kuznecova
- [#1770] Updated Italian translation, thanks to Mauro Lorenzutti